[package]
name = "pubsub_grpc"
version = "0.1.0"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tc1io/pubsub-grpc"
description = """
A gRPC client library for Pubsub, generated automatically from the API definition files in Google APIs.
"""
keywords = ["pubsub", "grpc", "gcp"]

[lib]

[dependencies]
tonic = { version = "0.1", features = ["tls", "tls-roots"] }
prost = "0.6"
prost-types = "0.6"

[build-dependencies]
tonic-build = "0.1"

#documentation = "https://gkkachi.github.io/firestore-grpc"
